add_library(student Linear_list/student.cpp)
add_library(parenthesis_matching Stack/parenthesis_matching.cpp)
add_library(towers_of_hanoi Stack/towers_of_hanoi.cpp)
add_library(rearranging_railroad_cars Stack/rearranging_railroad_cars.cpp)
add_library(switch_box_routing Stack/switch_box_routing.cpp)
add_library(offline_equivalence_class Stack/offline_equivalence_class.cpp)

add_gtest(NAME bin_sort_test SOURCE Linear_list/bin_sort_test.cpp LIBRARY student)
add_gtest(NAME radix_sort_test SOURCE Linear_list/radix_sort_test.cpp LIBRARY student)
add_gtest(NAME parenthesis_matching_test SOURCE Stack/parenthesis_matching_test.cpp LIBRARY parenthesis_matching)
add_gtest(NAME towers_of_hanoi_test SOURCE Stack/towers_of_hanoi_test.cpp LIBRARY towers_of_hanoi)
add_gtest(NAME rearranging_railroad_cars_test SOURCE Stack/rearranging_railroad_cars_test.cpp LIBRARY rearranging_railroad_cars)
add_gtest(NAME switch_box_routing_test SOURCE Stack/switch_box_routing_test.cpp LIBRARY switch_box_routing)
add_gtest(NAME offline_equivalence_class_test SOURCE Stack/offline_equivalence_class_test.cpp LIBRARY offline_equivalence_class)
